...

      <View className="mb-1 mt-5 flex flex-wrap justify-end gap-y-4">
        <View className="flex w-full gap-2">
          <ControlledTextField
            control={control}
            name="email"
            placeholder={'Email Address'}
            className="w-full"
            autoCapitalize="none"
          />
          <ControlledSecureField
            control={control}
            name="password"
            placeholder="Password"
            className="w-full"
          />
        </View>
        <View className="flex w-full flex-row justify-end gap-2">
          <Button
            className=""
...
