...
  const [selectedMonth, setSelectedMonth] = useState('All')
  const [selectedYear, setSelectedYear] = useState('All')
  const [selectedType, setSelectedType] = useState('All')
  const [doctorId, setDoctorId] = useState<string | number>('All')
  const [facilityId, setFacilityId] = useState<string | number>('All')
  const router = useRouter()
  const [currentFilter, setCurrentFilter] = useState('Upcoming')
  const [isDataReceived, setIsDataReceived] = useState(false)
  const [isShowFilter, setIsShowFilter] = useState(false)
  const [isFilter, setIsFilter] = useState(false)
  const [appointmentsList, setAppointmentsList] = useState<
    AppointmentListItem[]
  >([])
...
      })
    }
  }
  return (
    <View className="flex-1">
      <PtsLoader loading={isLoading} />
      <PtsBackHeader title="Appointments" memberData={memberData} />
      <View className="flex-row ">
        <TouchableOpacity
          onPress={() => {
            setIsFilter(false)
            setIsShowFilter(!isShowFilter)
          }}
...
